Fix horizontal scrollbar from appearing.  Fix name fields for package and bower json files.  Standardise formatting of son files

--- a/client/src/home/home.less
+++ b/client/src/home/home.less
@@ -7,7 +7,6 @@
   background-attachment: fixed;
   text-align: center;
   height: 100vh;
-  width: 100vw;
   &-name {
     color: white;
     font-size: 5vw;
